<resources>
    <string name="app_name">TareaAndroid1</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <string name="registrar">Registrarse</string>
    <string name="siguiente">Siguiente</string>
    <string name="cancelar">Cancelar</string>
    <string name="esta_seguro">Está seguro?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="correo">Correo *</string>
    <string name="nombre">Nombre *</string>
    <string name="apellido">Apellido</string>
    <string name="usuario">Usuario *</string>
    <string name="usuario_login">Usuario</string>
    <string name="contraseña">Contraseña *</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="repetir_contraseña">Repetir contraseña *</string>
    <string name="documento">Documento</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="rol">Rol *</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="error_login">Error al loguear: El usuario que ingreso no existe o la contraseña es erronea.</string>
    <string name="confirmar">Confirmar</string>
    <string name="goback_menu">BACK</string>
    <string name="usuario_existe">El nombre que ingreso ya esta en uso. Elija otro nombre de usuario.</string>
    <string name="pass_dont_match">Las contraseñas no coinciden o no fueron ingresadas.</string>
    <string name="missing_info_register">Uno o más campos necesarios no han sido llenados.</string>
    <string name="client">Cliente</string>
    <string name="employee">Empleado</string>
    <string name="fecha_sin_elejir">No hay una fecha seleccionada.</string>
    <string name="seleccionar_fecha_home_cliente">Seleccionar Fecha</string>
    <string name="campos_necesarios">Los campos marcados con * son necesarios.</string>
    <string name="cargando">Cargando, por favor espere.</string>
    <string name="user_list">Listar usuarios.</string>
</resources>
